--- a/WcfTokenService/WcfTokenService.csproj
+++ b/WcfTokenService/WcfTokenService.csproj
@@ -41,7 +41,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -64,15 +72,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\BasicTokenDatabase.mdf" />
+    <Content Include="App_Data\BasicTokenDatabase_log.ldf">
+      <DependentUpon>BasicTokenDatabase.mdf</DependentUpon>
+    </Content>
     <Content Include="Services\AuthenticationTokenService.svc" />
     <Content Include="Services\Test1Service.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Business\CodeExampleCredentialsValidator.cs" />
-    <Compile Include="Business\CodeExampleTokenBuilder.cs" />
-    <Compile Include="Business\CodeExampleTokenValidator.cs" />
+    <Compile Include="Business\DatabaseCredentialsValidator.cs" />
+    <Compile Include="Business\DatabaseTokenBuilder.cs" />
+    <Compile Include="Business\DatabaseTokenValidator.cs" />
     <Compile Include="Business\Hash.cs" />
+    <Compile Include="Database\BasicTokenDbContext.cs" />
+    <Compile Include="Database\Token.cs" />
+    <Compile Include="Database\User.cs" />
     <Compile Include="Interfaces\ICredentialsValidator.cs" />
     <Compile Include="Interfaces\ITokenBuilder.cs" />
     <Compile Include="Interfaces\ITokenValidator.cs" />
@@ -87,10 +104,9 @@
       <DependentUpon>Test1Service.svc</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
