--- a/WcfTokenService/Web.config
+++ b/WcfTokenService/Web.config
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
-    <httpRuntime targetFramework="4.7"/>
+    <httpRuntime targetFramework="4.7" />
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="WcfTokenService.Services.AuthenticationTokenService" behaviorConfiguration="ServiceBehaviorHttp" >
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" 
-                  contract="WcfTokenService.Services.IAuthenticationTokenService" />
+      <service name="WcfTokenService.Services.AuthenticationTokenService" behaviorConfiguration="ServiceBehaviorHttp">
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" contract="WcfTokenService.Services.IAuthenticationTokenService" />
       </service>
-      <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceBehaviorHttp" >
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding"
-                  contract="WcfTokenService.Services.ITest1Service" />
+      <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceBehaviorHttp">
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" contract="WcfTokenService.Services.ITest1Service" />
       </service>
     </services>
     <behaviors>
@@ -33,13 +34,21 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <directoryBrowse enabled="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <directoryBrowse enabled="true" />
   </system.webServer>
-
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="BasicTokenDbConnection" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\BasicTokenDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
