--- a/WcfTokenService/Web.config
+++ b/WcfTokenService/Web.config
@@ -6,6 +6,8 @@
   </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="AllowAnonymousSvcPages" value="true"/>
+    <add key="AllowAnonymousSvcHelpPages" value="true"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
@@ -14,10 +16,12 @@
   <system.serviceModel>
     <services>
       <service name="WcfTokenService.Services.AuthenticationTokenService" behaviorConfiguration="ServiceBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" contract="WcfTokenService.Services.IAuthenticationTokenService" />
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" 
+                  binding="webHttpBinding" contract="WcfTokenService.Services.IAuthenticationTokenService" />
       </service>
-      <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" contract="WcfTokenService.Services.ITest1Service" />
+      <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceAuthBehaviorHttp">
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" 
+                  contract="WcfTokenService.Services.ITest1Service" />
       </service>
     </services>
     <behaviors>
@@ -31,8 +35,21 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
+        <behavior name="ServiceAuthBehaviorHttp"  >
+            <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+            <serviceDebug includeExceptionDetailInFaults="true" />
+            <!--<serviceAuthorization serviceAuthorizationManagerType ="WcfTokenService.Behaviors.TokenValidationBehaviorExtension, WcfTokenService"/>-->
+            <TokenValidationBehaviorExtension />
+          <!--<TokenValidationBehaviorExtension />-->
+        </behavior>
       </serviceBehaviors>
     </behaviors>
+    <extensions>
+      <behaviorExtensions>
+        <add name="TokenValidationBehaviorExtension"
+          type="WcfTokenService.Behaviors.TokenValidationBehaviorExtension, WcfTokenService, Version=1.0.0.0, Culture=neutral , PublicKeyToken=null"/>
+      </behaviorExtensions>
+    </extensions>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
