--- a/WcfTokenService/Web.config
+++ b/WcfTokenService/Web.config
@@ -10,18 +10,18 @@
     <add key="AllowAnonymousSvcHelpPages" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7" />
-    <httpRuntime targetFramework="4.7" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.serviceModel>
     <services>
       <service name="WcfTokenService.Services.AuthenticationTokenService" behaviorConfiguration="ServiceBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" 
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" bindingConfiguration="webBindingSSL"
                   binding="webHttpBinding" contract="WcfTokenService.Services.IAuthenticationTokenService" />
       </service>
       <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceAuthBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" binding="webHttpBinding" 
-                  contract="WcfTokenService.Services.ITest1Service" />
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" bindingConfiguration="webBindingSSL"
+                  binding="webHttpBinding" contract="WcfTokenService.Services.ITest1Service" />
       </service>
     </services>
     <behaviors>
@@ -38,9 +38,7 @@
         <behavior name="ServiceAuthBehaviorHttp"  >
             <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
             <serviceDebug includeExceptionDetailInFaults="true" />
-            <!--<serviceAuthorization serviceAuthorizationManagerType ="WcfTokenService.Behaviors.TokenValidationBehaviorExtension, WcfTokenService"/>-->
             <TokenValidationBehaviorExtension />
-          <!--<TokenValidationBehaviorExtension />-->
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -50,6 +48,15 @@
           type="WcfTokenService.Behaviors.TokenValidationBehaviorExtension, WcfTokenService, Version=1.0.0.0, Culture=neutral , PublicKeyToken=null"/>
       </behaviorExtensions>
     </extensions>
+    <bindings>
+      <webHttpBinding>
+        <binding name="webBindingSSL">
+          <security mode="Transport">
+            <transport clientCredentialType="None"/>
+          </security>
+        </binding>
+      </webHttpBinding>
+    </bindings>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
