Ya esta funcionando perfectamente
En realidad ya estaba funcionando solo que como estaba puesto el certificado SSL, no podia probar por postman- y me mandaba Not-Found. Ahora lo que sigue es implementar con el postman y el certificado SSL normal y luego ver mas de Autenticacion y Token

--- a/WcfTokenService/Web.config
+++ b/WcfTokenService/Web.config
@@ -16,11 +16,11 @@
   <system.serviceModel>
     <services>
       <service name="WcfTokenService.Services.AuthenticationTokenService" behaviorConfiguration="ServiceBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" bindingConfiguration="webBindingSSL"
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" 
                   binding="webHttpBinding" contract="WcfTokenService.Services.IAuthenticationTokenService" />
       </service>
       <service name="WcfTokenService.Services.Test1Service" behaviorConfiguration="ServiceAuthBehaviorHttp">
-        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" bindingConfiguration="webBindingSSL"
+        <endpoint address="" behaviorConfiguration="AjaxEnabledBehavior" 
                   binding="webHttpBinding" contract="WcfTokenService.Services.ITest1Service" />
       </service>
     </services>
@@ -48,7 +48,7 @@
           type="WcfTokenService.Behaviors.TokenValidationBehaviorExtension, WcfTokenService, Version=1.0.0.0, Culture=neutral , PublicKeyToken=null"/>
       </behaviorExtensions>
     </extensions>
-    <bindings>
+    <!--<bindings>
       <webHttpBinding>
         <binding name="webBindingSSL">
           <security mode="Transport">
@@ -56,7 +56,7 @@
           </security>
         </binding>
       </webHttpBinding>
-    </bindings>
+    </bindings>-->
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
